# mentalMaths

./: README.md  app.py  main.py  pyproject.toml  results.csv
mentalMaths/: pyproject.toml
scripts/: main.py
src/mental_maths/: assessment.py  config.yml  performance_tracker.py  question_generator.py
